fix auto card gap in card.module.css

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -2,8 +2,8 @@
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-    margin: 2rem auto;
-    width: 90%;
+    margin: 2rem 1rem;
+    width: 250px;
     max-width: fit-content;
 }
 
